nova_tests/plan101_4/negative/compose_duplicate_neg.nv
// Plan 101.4 — negative: два embed'а приносят одноимённые методы с
// одинаковой arity → conflict, override-механизм в V1 не поддержан.
//
// EXPECT_COMPILE_ERROR: [E_PROTOCOL_EMBED_DUPLICATE]

module nova_tests.plan101_4.negative.compose_duplicate_neg

type ProtoA protocol {
    same(x int) -> int
}

type ProtoB protocol {
    same(x int) -> int
}

type Combined protocol {
    use ProtoA
    use ProtoB
}

test "should error" {
    assert(1 == 1)
}
